fix gap on image border

--- a/css/custom.css
+++ b/css/custom.css
@@ -60,6 +60,7 @@
 
 .post-image {
   margin: 10px;
+  background-color: rgb(60, 64, 66);
 }
 
 .post-image img{
